個人履歷完成

--- a/index.html
+++ b/index.html
@@ -176,254 +176,84 @@
   <!-- 作品 -->
   <section id="portfolio" class="portfolio">
     <div class="container">
-      <div>
-        <h2 class="wow heartBeat" data-wow-offset="300">My portfolio</h2>
-      </div>
-      <div class="row">
-        <div class="col-12 col-lg-2">
-          <!-- 列表清單（list group）+ 導覽（Navs） -->
-          <ul class="list-group list-group-flush flex-row justify-content-center flex-lg-column">
-            <li class="list-group-item p-0"><a class="nav-item nav-link active" data-toggle="pill"
-                href="#eat-01">PS AI</a></li>
-            <li class="list-group-item p-0"><a class="nav-item nav-link" data-toggle="pill" href="#eat-02">VUE</a></li>
-            <li class="list-group-item p-0"><a class="nav-item nav-link" data-toggle="pill" href="#eat-03">JS</a></li>
-          </ul>
-        </div>
-        <div class="col-12 col-lg-10">
-          <div class="tab-content">
-            <!-- 咖啡飲品 -->
-            <div class="tab-pane fade show active" id="eat-01">
-              <!-- 第一列 -->
-              <div class="row">
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=1" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">義式濃縮咖啡</h5>
-                      <p class="card-text">香醇綿密口味的咖啡</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=2" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">美式冰咖啡</h5>
-                      <p class="card-text">香醇綿密口味的咖啡</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=3" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">拿鐵咖啡</h5>
-                      <p class="card-text">香醇綿密口味的咖啡</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=4" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">卡布奇諾</h5>
-                      <p class="card-text">香醇綿密口味的咖啡</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- 第二列 -->
-              <div class="row">
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=5" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">焦糖瑪奇朵</h5>
-                      <p class="card-text">香醇綿密口味的咖啡</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=6" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">摩卡咖啡</h5>
-                      <p class="card-text">香醇綿密口味的咖啡</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=7" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">泰山特調卡啡</h5>
-                      <p class="card-text">香醇綿密口味的咖啡</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
 
-            <!-- 特調飲品 -->
-            <div class="tab-pane fade" id="eat-02">
-              <!-- 第一列 -->
-              <div class="row">
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=8" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">冰牛奶</h5>
-                      <p class="card-text">各式風味獨特經典飲品</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=9" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">風味鮮奶茶</h5>
-                      <p class="card-text">各式風味獨特經典飲品</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=10" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">日式抹茶歐蕾</h5>
-                      <p class="card-text">各式風味獨特經典飲品</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=11" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">蜂蜜香柚茶</h5>
-                      <p class="card-text">各式風味獨特經典飲品</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- 第二列 -->
-              <div class="row">
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=12" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">百香鮮果茶</h5>
-                      <p class="card-text">各式風味獨特經典飲品</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=13" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">泰山特調冰茶</h5>
-                      <p class="card-text">各式風味獨特經典飲品</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- 手作蛋糕 -->
-            <div class="tab-pane fade" id="eat-03">
-              <!-- 第一列 -->
-              <div class="row">
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=14" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">黑糖波士頓</h5>
-                      <p class="card-text">口感層次豐富，入口甜在心</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=15" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">提拉米蘇</h5>
-                      <p class="card-text">口感層次豐富，入口甜在心</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=16" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">檸檬起士塔</h5>
-                      <p class="card-text">口感層次豐富，入口甜在心</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=17" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">蒙布朗</h5>
-                      <p class="card-text">口感層次豐富，入口甜在心</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- 第二列 -->
-              <div class="row">
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=18" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">櫻桃起司</h5>
-                      <p class="card-text">口感層次豐富，入口甜在心</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=19" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">頂級瑞士巧克力</h5>
-                      <p class="card-text">口感層次豐富，入口甜在心</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <img src="https://picsum.photos/300/200/?random=20" class="card-img-top" />
-                    <div class="card-body">
-                      <h5 class="card-title">德式布丁</h5>
-                      <p class="card-text">口感層次豐富，入口甜在心</p>
-                      <span>NT.100</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-              </div>
-            </div>
+      <div class="section-title">
+        <h2>My Portfolio</h2>
+      </div>
+      <div class="row portfolio-container">
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-img">
+            <a href="https://zxc87824557.github.io/naicatshoes/" target="_blank">
+              <img src="assets/img/portfolio/球鞋商店.png" class="img-fluid" alt="">
+            </a>
+          </div>
+          <div class="portfolio-info">
+            <h4>球鞋網路商店</h4>
+            <p>可瀏覽商品，將商品加入購物車、註冊/登入會員、後臺管理</p>
           </div>
         </div>
-      </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-img">
+            <a href="https://zxc87824557.github.io/js-da-jiang-shi-zxc87824557/打殭屍作業/打殭屍作業.html" target="_blank">
+            <img src="assets/img/portfolio/打殭屍.png" class="img-fluid" alt="">
+          </a>
+          </div>
+          <div class="portfolio-info">
+            <h4>打殭屍小遊戲</h4>
+            <p>用 jQuery 操作 DOM 的練習作業，自行提升作業難度，實現遊戲狀態機，可點擊角色加分、扣分。</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-img">
+            <a href="https://zxc87824557.github.io/css-zen-garden-zxc87824557/index.html" class="details-link" title="More Details">
+            <img src="assets/img/portfolio/zen.png" class="img-fluid" alt="">
+          </a>
+        </div>
+          <div class="portfolio-info">
+            <h4>Css Zen Garden</h4>
+            <p>自己設計叢林的版面。
+              index.html 的標籤結構、內容不可變動。</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-img">
+            <a href="https://zxc87824557.github.io/js-da-di-shu-zxc87824557/打地鼠作業.html" class="details-link" title="More Details">
+            <img src="assets/img/portfolio/打地鼠.png" class="img-fluid" alt="">
+          </a>
+        </div>
+          <div class="portfolio-info">
+            <h4>9宮格小遊戲</h4>
+            <p>用 javascript 做出來的小遊戲，自行提升作業難度，實現遊戲狀態機，可點擊角色加分、扣分。</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-img">
+            <a href="https://zxc87824557.github.io/tomo1/" class="details-link" title="More Details">
+            <img src="assets/img/portfolio/番茄鐘.png" class="img-fluid" alt="">
+          </a>
+        </div>
+          <div class="portfolio-info">
+            <h4>番茄鐘</h4>
+            <p>可時間倒數、新增/修改待辦事項、已完成清單、選擇響鈴。</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-img">
+            <a href="https://www.artstation.com/user-5256" class="details-link" title="More Details">
+            <img src="assets/img/portfolio/psai.png" class="img-fluid" alt="">
+          </a>
+        </div>
+          <div class="portfolio-info">
+            <h4>視覺設計</h4>
+            <p>使用ps繪圖跟ai設計</p>
+          </div>
+        </div>
+
     </div>
   </section>
   </main>
