--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-img">
             <a href="https://zxc87824557.github.io/naicatshoes/" target="_blank">
-              <img src="assets/img/portfolio/球鞋商店.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/球鞋商店.PNG" class="img-fluid" alt="">
             </a>
           </div>
           <div class="portfolio-info">
@@ -196,7 +196,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-img">
             <a href="https://zxc87824557.github.io/js-da-jiang-shi-zxc87824557/打殭屍作業/打殭屍作業.html" target="_blank">
-            <img src="assets/img/portfolio/打殭屍.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/打殭屍.PNG" class="img-fluid" alt="">
           </a>
           </div>
           <div class="portfolio-info">
@@ -208,7 +208,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-img">
             <a href="https://zxc87824557.github.io/css-zen-garden-zxc87824557/index.html" class="details-link" title="More Details">
-            <img src="assets/img/portfolio/zen.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/zen.PNG" class="img-fluid" alt="">
           </a>
         </div>
           <div class="portfolio-info">
@@ -221,7 +221,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-img">
             <a href="https://zxc87824557.github.io/js-da-di-shu-zxc87824557/打地鼠作業.html" class="details-link" title="More Details">
-            <img src="assets/img/portfolio/打地鼠.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/打地鼠.PNG" class="img-fluid" alt="">
           </a>
         </div>
           <div class="portfolio-info">
@@ -233,7 +233,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-img">
             <a href="https://zxc87824557.github.io/tomo1/" class="details-link" title="More Details">
-            <img src="assets/img/portfolio/番茄鐘.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/番茄鐘.PNG" class="img-fluid" alt="">
           </a>
         </div>
           <div class="portfolio-info">
@@ -245,7 +245,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-img">
             <a href="https://www.artstation.com/user-5256" class="details-link" title="More Details">
-            <img src="assets/img/portfolio/psai.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/psai.PNG" class="img-fluid" alt="">
           </a>
         </div>
           <div class="portfolio-info">
