--- a/index.html
+++ b/index.html
@@ -215,6 +215,18 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-img">
+            <a href="https://zxc87824557.github.io/coffee/index.html" class="details-link" title="More Details">
+            <img src="assets/img/portfolio/coffee.PNG" class="img-fluid" alt="">
+          </a>
+        </div>
+          <div class="portfolio-info">
+            <h4>咖啡館一頁式切版</h4>
+            <p>使用html、css、jQuery完成。</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item">
+          <div class="portfolio-img">
             <a href="https://zxc87824557.github.io/js-da-di-shu-zxc87824557/打地鼠作業.html" class="details-link" title="More Details">
             <img src="assets/img/portfolio/打地鼠.PNG" class="img-fluid" alt="">
           </a>
